<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">


    <TextView
        android:id="@+id/ewa_tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/amount"
        android:textColor="#ff006aaa"
        android:textSize="@dimen/abc_text_size_large_material"
        />

    <EditText
        android:id="@+id/ewa_et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ewa_tv_label"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"
        android:gravity="center"
        android:hint="@string/hint_amount"
        android:inputType="numberSigned|numberDecimal"
        android:padding="5dp"
        android:textColor="#00a911"
        android:textColorHint="#cc2e2e2e"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tv_stack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ewa_et_amount"/>

    <View
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_stack"
        android:layout_marginTop="15dp"
        android:background="#b4000637"/>

    <TextView
        android:id="@+id/ma_tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/separator1"
        android:layout_marginTop="15dp"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF006AAA"/>

    <Button
        android:id="@+id/b_pick_category"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator1"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/ma_tv_category"
        android:layout_toRightOf="@+id/ma_tv_category"
        android:text="Pick Category"/>

    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ma_tv_category"
        android:layout_marginTop="15dp"
        android:background="#b4000637"/>

    <TextView
        android:id="@+id/ewa_tv_label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_below="@+id/separator2"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/comment"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff006aaa"
        android:textSize="@dimen/abc_text_size_medium_material"/>

    <EditText
        android:id="@+id/ewa_et_usernote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ewa_tv_label2"
        android:hint="@string/hint_comment"/>


    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ewa_et_usernote"
        android:layout_alignRight="@+id/ewa_et_usernote"
        android:layout_below="@+id/ewa_et_usernote"
        android:layout_marginTop="10dp"
        android:background="#8c00ff30"
        android:gravity="center_horizontal"
        android:text="@string/date"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#8c00ff30"
        android:gravity="center"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18sp"/>


    <Button
        android:id="@+id/ewa_b_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#ff0073ff"
        android:text="@string/submit_button"
        android:textColor="#ffffff"/>

    <GridView
        android:id="@+id/grid_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_above="@id/ewa_b_save"
        android:background="#e1e1e1"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"/>

</RelativeLayout>
