<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/my_background"
                tools:context="com.zinc.zoopy.waste.ActivityReport">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/my_orange"
        android:id="@+id/periodLayout">

        <TextView
            android:id="@+id/tv_period_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:textColor="@color/my_white"
            android:text="@string/Period"
            android:textSize="22sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:id="@+id/image_arrow1"
            android:gravity="right"
            android:src="@drawable/ic_play_arrow_white_48dp"/>
        <TextView
            android:id="@+id/tv_period"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/image_arrow1"
            android:gravity="center"
            android:text="@string/period_all"
            android:textSize="22sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/my_orange"
        android:id="@+id/categoryLayout"
        android:layout_below="@+id/periodLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv_category_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/my_white"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/category"
            android:textSize="22sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:id="@+id/image_arrow2"
            android:gravity="right"
            android:src="@drawable/ic_play_arrow_white_48dp"/>

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/image_arrow2"
            android:gravity="center"
            android:text="All"
            android:textSize="22sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/my_orange"
        android:layout_marginTop="15dp"
        android:id="@+id/resultLayout"
        android:layout_below="@+id/categoryLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv_result_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/my_white"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/Result"
            android:textSize="22sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:id="@+id/image_arrow3"
            android:gravity="right"
            android:src="@drawable/ic_play_arrow_white_48dp"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/image_arrow3"
            android:gravity="center"
            android:text="0"
            android:textSize="22sp"/>

    </RelativeLayout>

</RelativeLayout>
