<com.sothree.slidinguppanel.SlidingUpPanelLayout
    android:id="@+id/sliding_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background"
    android:gravity="bottom"
    sothree:umanoFadeColor="@android:color/transparent"
    sothree:umanoPanelHeight="93dp"
    sothree:umanoShadowHeight="4dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ewa_tv_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="@color/my_white"
            android:textSize="@dimen/abc_text_size_large_material"/>

        <EditText
            android:id="@+id/ewa_et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ewa_tv_label"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/custom_edit_text"
            android:gravity="center"
            android:hint="0"
            android:inputType="numberSigned|numberDecimal"
            android:padding="15dp"
            android:text="0"
            android:textColor="@color/my_green"
            android:textColorHint="@color/my_grey"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/tv_stack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ewa_et_amount"
            android:gravity="center"
            android:textColor="#c5c5c5"/>

        <RelativeLayout
            android:id="@+id/pick_category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_stack">

            <View
                android:id="@+id/separator1"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/my_dark_blue"/>


            <Button
                android:id="@+id/b_pick_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator1"
                android:background="@color/my_orange"
                android:drawableLeft="@drawable/orange_star_48dp_03"
                android:drawableRight="@drawable/arrows_white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Pick Category"
                android:textColor="@android:color/white"/>



            <View
                android:id="@+id/separator2"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/b_pick_category"
                android:background="@color/my_dark_blue"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/ewa_et_usernote"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:paddingLeft="5dp"
            android:background="@drawable/comment"
            android:hint="@string/hint_comment"
            android:layout_margin="16dp"
            android:textStyle="italic"
            android:textSize="16sp"
            android:layout_below="@+id/pick_category_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ewa_et_usernote"
            android:layout_marginTop="10dp"
            android:gravity="center">
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/date_text_view"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="Date"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="22sp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_date"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="10dp"
            android:background="@drawable/date_text_view"
            android:gravity="center"
            android:text="Time"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="22sp"/>
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_background_dark">
        <View
            android:layout_width="wrap_content"
            android:id="@+id/separator3"
            android:layout_height="3dp"
            android:background="@color/my_blue"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/slide_layout"
            android:layout_below="@id/separator3"
            android:gravity="center"
            android:layout_height="40dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:id="@+id/img_slide_arrows"
                android:src="@drawable/slide_up_arrows__dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/eps__dp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/img_slide_arrows"/>
        </RelativeLayout>
        <Button
            android:id="@+id/ewa_b_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/slide_layout"
            android:background="@color/my_green"
            android:text="@string/submit_button"
            android:textColor="#ffffff"/>

        <GridView
            android:id="@+id/grid_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ewa_b_save"
            android:background="@color/my_background_dark"
            android:gravity="center"
            android:horizontalSpacing="2dp"
            android:numColumns="4"
            android:padding="5dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp"
            android:visibility="visible"/>
    </RelativeLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>